# ORB_SLAM3_VIK

./: CMakeLists.txt  Dependencies.md  README.md  README_old.md  build.sh  build_ros.sh  gtx3_description.urdf
Examples/ROS/ORB_SLAM3/: package.xml
Examples/ROS/ORB_SLAM3/include/: message_utils.h
Examples/ROS/ORB_SLAM3/src/: message_utils.cpp
Examples_old/RGB-D-Inertial/: rgbd_inertial_realsense_D435i.cc
Examples_old/ROS/ORB_SLAM3/: CMakeLists.txt  MyK4A.yaml  c_1280720.yaml  c_640480.yaml  c_b_640480.yaml  c_i_1280720.yaml  c_i_640480.yaml  example.yaml  package.xml
Examples_old/ROS/ORB_SLAM3/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Examples_old/ROS/ORB_SLAM3/include/: message_utils.h
Examples_old/ROS/ORB_SLAM3/include/ORBSLAM3_DENSE/utils/: message_utils.h
Examples_old/ROS/ORB_SLAM3/src/: message_utils.cpp  ros_rgbd.cc  ros_rgbd_inertial.cc  ros_rgbd_inertial_kinematic.cc  ros_stereo_inertial.cc
Examples_old/ROS/ORB_SLAM3/src/AR/: ViewerAR.cc  ViewerAR.h
Examples_old/ROS/ORB_SLAM3/src/ORBSLAM3_DENSE/utils/: message_utils.cpp
dataset/: FrameTrajectory_rosRGBDInertial.txt  KeyFrameTrajectory_rosRGBDInertial.txt
dataset/20230626/: FrameTrajectory_rosRGBDInertial.txt  KeyFrameTrajectory_rosRGBDInertial.txt
dataset/20230627/: FrameTrajectory_rosRGBDInertial.txt  KeyFrameTrajectory_rosRGBDInertial.txt  KeyFrameTrajectory_rosRGBDInertial_BA2.txt
dataset/20230627/1/: FrameTrajectory_rosRGBDInertial.txt  KeyFrameTrajectory_rosRGBDInertial.txt  KeyFrameTrajectory_rosRGBDInertial_BA2.txt
dataset/20230627/2/: FrameTrajectory_rosRGBDInertial.txt  KeyFrameTrajectory_rosRGBDInertial.txt  KeyFrameTrajectory_rosRGBDInertial_BA2.txt
dataset/20230627/3/: FrameTrajectory_rosRGBDInertial.txt  KeyFrameTrajectory_rosRGBDInertial.txt  KeyFrameTrajectory_rosRGBDInertial_BA2.txt
dataset/20230627/4/: FrameTrajectory_rosRGBDInertial.txt  KeyFrameTrajectory_rosRGBDInertial.txt  KeyFrameTrajectory_rosRGBDInertial_BA2.txt
dataset/20230627/5/: FrameTrajectory_rosRGBDInertial.txt  KeyFrameTrajectory_rosRGBDInertial.txt
dataset/20230627/6/: FrameTrajectory_rosRGBDInertial.txt  KeyFrameTrajectory_rosRGBDInertial.txt  KeyFrameTrajectory_rosRGBDInertial_BA2.txt
dataset/20230627/手持_1m_1m/: FrameTrajectory_rosRGBDInertial.txt  KeyFrameTrajectory_rosRGBDInertial.txt  KeyFrameTrajectory_rosRGBDInertial_BA2.txt
dataset/20230708/1/: FrameTrajectory_rosRGBDInertial.txt  KeyFrameTrajectory_rosRGBDInertial.txt  KeyFrameTrajectory_rosRGBDInertial_BA2.txt
dataset/20230708/2/: FrameTrajectory_rosRGBDInertial.txt  KeyFrameTrajectory_rosRGBDInertial.txt
dataset/20230708/3/: FrameTrajectory_rosRGBDInertial.txt  KeyFrameTrajectory_rosRGBDInertial.txt  KeyFrameTrajectory_rosRGBDInertial_BA2.txt
dataset/20230708/4/: FrameTrajectory_rosRGBDInertial.txt  KeyFrameTrajectory_rosRGBDInertial.txt  KeyFrameTrajectory_rosRGBDInertial_BA2.txt
dataset/20230708/5/: FrameTrajectory_rosRGBDInertial.txt  KeyFrameTrajectory_rosRGBDInertial.txt  KeyFrameTrajectory_rosRGBDInertial_BA2.txt
dataset/20230708/shouchi/: FrameTrajectory_rosRGBDInertial.txt  KeyFrameTrajectory_rosRGBDInertial.txt  KeyFrameTrajectory_rosRGBDInertial_BA2.txt
dataset/轨迹对比/: FrameTrajectory_VI.txt  FrameTrajectory_VIK.txt  VI-2.txt  VIK-2.txt
include/: Converter.h  Frame.h  FrameDrawer.h  G2oTypes.h  ImuTypes.h  KeyFrame.h  LocalMapping.h  LoopClosing.h  Map.h  MapPoint.h  MapPublisher.h  Optimizer.h  PointCloude.h  Settings.h  System.h  Tracking.h  forward_kinematics.h  pointcloudmapping.h
src/: Frame.cc  FrameDrawer.cc  G2oTypes.cc  GeometricTools.cc  ImuTypes.cc  KeyFrame.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapPoint.cc  MapPublisher.cc  ORBextractor.cc  ORBmatcher.cc  OptimizableTypes.cpp  Optimizer.cc  PointCloude.cpp  Settings.cc  System.cc  Tracking.cc  TwoViewReconstruction.cc  Viewer.cc  eigen_kdl.cpp  forward_kinematics.cpp  pointcloudmapping.cpp
调试log/: 20230613-晚.txt
